test/scc/decl/semantic-errors/057.a
057.t:1:17: error: parameter name omitted